--- a/frontend/frontend-proventus/.gitignore
+++ b/frontend/frontend-proventus/.gitignore
@@ -9,9 +9,12 @@ lerna-debug.log*
 
 node_modules
 dist
+build
 dist-ssr
 *.local
-
+# Build files
+/build
+/dist
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
