--- a/frontend/frontend-proventus/package.json
+++ b/frontend/frontend-proventus/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
