--- a/frontend/frontend-proventus/package.json
+++ b/frontend/frontend-proventus/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend-proventus",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite --port 4201",
@@ -21,6 +21,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.4.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.2",
